--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,7 @@ h1, h2 {
     border-style: solid;
     align-self: center;
     justify-self: center;
+    font-size: 3vw;
 }
 #btnHome h1 {
     padding: 4px;
@@ -41,6 +42,7 @@ header {
     height: 100vh;
     background-repeat: no-repeat; /* Do not repeat the image */
     background-size: cover; /* Resize the background image to cover the entire container */
+    color: white;
 }
 
 .borderTitle{
@@ -111,22 +113,26 @@ nav > div > a{
     margin-top: 1.2rem;
     width: 100%;
     align-self: center;
+    border-color: #7b1e31;
+    border-radius: 2rem;
+    border-style: solid;
+    border-width: 0.2rem;
 }
 .txtStory{
     position: absolute;
     bottom: 20%;
     left: 8%;
     background-color: rgba(0, 0, 0, 0.74);
-    background-size: 5rem;
+    background-size: 6rem;
     color: white;
     padding-left: 20px;
     padding-right: 20px;
     text-align: center;
-    font-size: 2vw;
+    font-size: 1.7vw;
     width: 30%;
 }
 h2{
-    font-size: 3vw;
+    font-size: 2.5vw;
     color: white;
 }
 /* ---------- */
