--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -578,150 +578,196 @@ footer {
 #credits {
     visibility: hidden;
 }
+
 /* PHONE POV */
 /* grid */
-@media screen and (max-width: 490px){
+@media screen and (max-width: 490px) {
     .wrapper {
         display: grid;
         grid-template-columns: repeat(8, 1fr);
-        grid-template-rows: auto 200px 500px 500px 500px 500px 500px;
-        
-        }
-    header{
-       
+        grid-template-rows: auto 50vh 500px 500px 500px auto;
+
+    }
+
+    header {
+
         grid-column: span 8;
         grid-row: 2;
-        height: 200px;      
-    } 
-    .topnav{
-      
+        height: 50vh;
+    }
+
+    .topnav {
+
         grid-column: Span 8;
-        grid-row: 1;   
+        grid-row: 1;
     }
-    #secStory{
-       
+
+    #secStory {
+
         grid-column: span 8;
-        grid-row: 3;   
+        grid-row: 3;
     }
-    #secService{
-        
+
+    #secService {
+
         grid-column: span 8;
-        grid-row: 4;   
+        grid-row: 4;
     }
-    footer{      
+
+    footer {
         grid-column: span 8;
         grid-row: 6/7;
-        display: grid; 
-        grid-template-columns: 40% 40% 20%;
+        display: grid;
+        /* grid-template-columns: 40% 40% 20%; */
+        grid-template-columns: 1fr 1fr 1fr;
         grid-template-rows: 2;
     }
-    #legalinf{
+
+    #legalinf {
         grid-column: 1/3;
         grid-row: 6;
     }
-    #gmap{
+
+    #gmap {
         grid-column: 4/7;
         grid-row: 6;
         height: 50px;
     }
-    .fblogo{
+
+    .fblogo {
         grid-column: 7/8;
         grid-row: 6;
     }
-    
-    #copyright{
+
+    #copyright {
         grid-column: span 8;
         grid-row: 7;
     }
 
-    #secContact{
-      
+    #secContact {
+
         grid-column: span 8;
-        grid-row: 5;  
+        grid-row: 5;
     }
+
     /*gauche*/
-.caroussel_diapo #carou_un:checked~.contenu_carou .caroussel {
+    .caroussel_diapo #carou_un:checked~.contenu_carou .caroussel {
 
-    display: non;
-}
-
-.caroussel_diapo #carou_deux:checked~.contenu_carou .caroussel {
-
-    transform: translateZ(-540px) rotateY(-45deg)
-}
-
-.caroussel_diapo #carou_trois:checked~.contenu_carou .caroussel {
-
-    transform: translateZ(-540px) rotateY(-90deg)
-}
-
-.caroussel_diapo #carou_quatre:checked~.contenu_carou .caroussel {
-
-    transform: translateZ(-540px) rotateY(-135deg)
-}
-
-.caroussel_diapo #carou_cinq:checked~.contenu_carou .caroussel {
-
-    transform: translateZ(-540px) rotateY(-180deg)
-}
-
-.caroussel_diapo #carou_six:checked~.contenu_carou .caroussel {
-
-    transform: translateZ(-540px) rotateY(-225deg)
-}
-
-.caroussel_diapo #carou_sept:checked~.contenu_carou .caroussel {
-
-    transform: translateZ(-540px) rotateY(-270deg)
-}
-
-.caroussel_diapo #carou_huit:checked~.contenu_carou .caroussel {
-
-    transform: translateZ(-540px) rotateY(-315deg)
-}
-
-
-/*droite*/
-.caroussel_diapo #carou_un:checked~.contenu_carou .caroussel div:nth-child(1) {
-
-    transform: translateZ(540px) scale(1)
-}
-
-.caroussel_diapo #carou_deux:checked~.contenu_carou .caroussel div:nth-child(2) {
-
-    transform: rotateY(45deg) translateZ(540px) scale(1)
-}
-
-.caroussel_diapo #carou_trois:checked~.contenu_carou .caroussel div:nth-child(3) {
-
-    transform: rotateY(90deg) translateZ(540px) scale(1)
-}
-
-.caroussel_diapo #carou_quatre:checked~.contenu_carou .caroussel div:nth-child(4) {
-
-    transform: rotateY(135deg) translateZ(540px) scale(1)
-}
-
-.caroussel_diapo #carou_cinq:checked~.contenu_carou .caroussel div:nth-child(5) {
-
-    transform: rotateY(180deg) translateZ(540px) scale(1)
-}
-
-.caroussel_diapo #carou_six:checked~.contenu_carou .caroussel div:nth-child(6) {
-
-    transform: rotateY(225deg) translateZ(540px) scale(1)
-}
-
-.caroussel_diapo #carou_sept:checked~.contenu_carou .caroussel div:nth-child(7) {
-
-    transform: rotateY(270deg) translateZ(540px) scale(1)
-}
-
-.caroussel_diapo #carou_huit:checked~.contenu_carou .caroussel div:nth-child(8) {
-
-    transform: rotateY(315deg) translateZ(540px) scale(1)
-}
+        display: non;
     }
+
+    .caroussel_diapo #carou_deux:checked~.contenu_carou .caroussel {
+
+        transform: translateZ(-540px) rotateY(-45deg)
+    }
+
+    .caroussel_diapo #carou_trois:checked~.contenu_carou .caroussel {
+
+        transform: translateZ(-540px) rotateY(-90deg)
+    }
+
+    .caroussel_diapo #carou_quatre:checked~.contenu_carou .caroussel {
+
+        transform: translateZ(-540px) rotateY(-135deg)
+    }
+
+    .caroussel_diapo #carou_cinq:checked~.contenu_carou .caroussel {
+
+        transform: translateZ(-540px) rotateY(-180deg)
+    }
+
+    .caroussel_diapo #carou_six:checked~.contenu_carou .caroussel {
+
+        transform: translateZ(-540px) rotateY(-225deg)
+    }
+
+    .caroussel_diapo #carou_sept:checked~.contenu_carou .caroussel {
+
+        transform: translateZ(-540px) rotateY(-270deg)
+    }
+
+    .caroussel_diapo #carou_huit:checked~.contenu_carou .caroussel {
+
+        transform: translateZ(-540px) rotateY(-315deg)
+    }
+
+
+    /*droite*/
+    .caroussel_diapo #carou_un:checked~.contenu_carou .caroussel div:nth-child(1) {
+
+        transform: translateZ(540px) scale(1)
+    }
+
+    .caroussel_diapo #carou_deux:checked~.contenu_carou .caroussel div:nth-child(2) {
+
+        transform: rotateY(45deg) translateZ(540px) scale(1)
+    }
+
+    .caroussel_diapo #carou_trois:checked~.contenu_carou .caroussel div:nth-child(3) {
+
+        transform: rotateY(90deg) translateZ(540px) scale(1)
+    }
+
+    .caroussel_diapo #carou_quatre:checked~.contenu_carou .caroussel div:nth-child(4) {
+
+        transform: rotateY(135deg) translateZ(540px) scale(1)
+    }
+
+    .caroussel_diapo #carou_cinq:checked~.contenu_carou .caroussel div:nth-child(5) {
+
+        transform: rotateY(180deg) translateZ(540px) scale(1)
+    }
+
+    .caroussel_diapo #carou_six:checked~.contenu_carou .caroussel div:nth-child(6) {
+
+        transform: rotateY(225deg) translateZ(540px) scale(1)
+    }
+
+    .caroussel_diapo #carou_sept:checked~.contenu_carou .caroussel div:nth-child(7) {
+
+        transform: rotateY(270deg) translateZ(540px) scale(1)
+    }
+
+    .caroussel_diapo #carou_huit:checked~.contenu_carou .caroussel div:nth-child(8) {
+
+        transform: rotateY(315deg) translateZ(540px) scale(1)
+    }
+
+
+    /* fix contenus sur la gauche pour tel  */
     
-    /* grid */
-    /* PHONE POV */
+    .caroussel div:nth-child(1) {
+        transform: translate3d(0, 0, 540px) scale(0)
+    }
+
+    .caroussel div:nth-child(2) {
+        transform: rotateY(45deg) translateZ(540px) scale(.0)
+    }
+
+    .caroussel div:nth-child(3) {
+        transform: rotateY(90deg) translateZ(540px) scale(.0)
+    }
+
+    .caroussel div:nth-child(4) {
+        transform: rotateY(135deg) translateZ(540px) scale(.0)
+    }
+
+    .caroussel div:nth-child(5) {
+        transform: rotateY(180deg) translateZ(540px) scale(.0)
+    }
+
+    .caroussel div:nth-child(6) {
+        transform: rotateY(225deg) translateZ(540px) scale(.0)
+    }
+
+    .caroussel div:nth-child(7) {
+        transform: rotateY(270deg) translateZ(540px) scale(.0)
+    }
+
+    .caroussel div:nth-child(8) {
+        transform: rotateY(315deg) translateZ(540px) scale(.0)
+    }
+}
+
+/* grid */
+/* PHONE POV */
