--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -585,16 +585,24 @@ footer {
     .wrapper {
         display: grid;
         grid-template-columns: repeat(8, 1fr);
-        grid-template-rows: auto 50vh 500px 500px 500px auto;
+        grid-template-rows: auto 41vh 500px 500px 500px auto;
 
+    }
+
+    .adress {
+        color: #7b1e31;
     }
 
     header {
 
         grid-column: span 8;
         grid-row: 2;
-        height: 50vh;
+        height: 41vh;
     }
+
+    /* #infoContact1 {
+        color: #7B1E31;
+    } */
 
     .topnav {
 
@@ -649,90 +657,6 @@ footer {
         grid-column: span 8;
         grid-row: 5;
     }
-
-    /*gauche*/
-    .caroussel_diapo #carou_un:checked~.contenu_carou .caroussel {
-
-        display: non;
-    }
-
-    .caroussel_diapo #carou_deux:checked~.contenu_carou .caroussel {
-
-        transform: translateZ(-540px) rotateY(-45deg)
-    }
-
-    .caroussel_diapo #carou_trois:checked~.contenu_carou .caroussel {
-
-        transform: translateZ(-540px) rotateY(-90deg)
-    }
-
-    .caroussel_diapo #carou_quatre:checked~.contenu_carou .caroussel {
-
-        transform: translateZ(-540px) rotateY(-135deg)
-    }
-
-    .caroussel_diapo #carou_cinq:checked~.contenu_carou .caroussel {
-
-        transform: translateZ(-540px) rotateY(-180deg)
-    }
-
-    .caroussel_diapo #carou_six:checked~.contenu_carou .caroussel {
-
-        transform: translateZ(-540px) rotateY(-225deg)
-    }
-
-    .caroussel_diapo #carou_sept:checked~.contenu_carou .caroussel {
-
-        transform: translateZ(-540px) rotateY(-270deg)
-    }
-
-    .caroussel_diapo #carou_huit:checked~.contenu_carou .caroussel {
-
-        transform: translateZ(-540px) rotateY(-315deg)
-    }
-
-
-    /*droite*/
-    .caroussel_diapo #carou_un:checked~.contenu_carou .caroussel div:nth-child(1) {
-
-        transform: translateZ(540px) scale(1)
-    }
-
-    .caroussel_diapo #carou_deux:checked~.contenu_carou .caroussel div:nth-child(2) {
-
-        transform: rotateY(45deg) translateZ(540px) scale(1)
-    }
-
-    .caroussel_diapo #carou_trois:checked~.contenu_carou .caroussel div:nth-child(3) {
-
-        transform: rotateY(90deg) translateZ(540px) scale(1)
-    }
-
-    .caroussel_diapo #carou_quatre:checked~.contenu_carou .caroussel div:nth-child(4) {
-
-        transform: rotateY(135deg) translateZ(540px) scale(1)
-    }
-
-    .caroussel_diapo #carou_cinq:checked~.contenu_carou .caroussel div:nth-child(5) {
-
-        transform: rotateY(180deg) translateZ(540px) scale(1)
-    }
-
-    .caroussel_diapo #carou_six:checked~.contenu_carou .caroussel div:nth-child(6) {
-
-        transform: rotateY(225deg) translateZ(540px) scale(1)
-    }
-
-    .caroussel_diapo #carou_sept:checked~.contenu_carou .caroussel div:nth-child(7) {
-
-        transform: rotateY(270deg) translateZ(540px) scale(1)
-    }
-
-    .caroussel_diapo #carou_huit:checked~.contenu_carou .caroussel div:nth-child(8) {
-
-        transform: rotateY(315deg) translateZ(540px) scale(1)
-    }
-
 
     /* fix contenus sur la gauche pour tel  */
     
