--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,7 +84,6 @@ header {
     background-color: rgb(34, 34, 34);
     overflow: hidden;
     z-index: 99;
-
 }
 
 /* Style the links inside the navigation bar */
@@ -290,6 +289,7 @@ h2 {
 /* ---------- */
 
 
+
 .caroussel_diapo input {
     position: absolute;
     left: -9999px
@@ -492,7 +492,6 @@ h2 {
 /* Formulaire */
 /* ---------- */
 
-
 .divCenter {
     margin: 20px auto;
     width: 80%;
@@ -512,12 +511,12 @@ h2 {
 
 }
 
-
 fieldset {
+
     width: 80%;
     max-width: 1024px;
     padding: 10px;
-  
+    margin: 10px;
     border: none;
     background: white;
     border-radius: 3px;
@@ -579,161 +578,43 @@ footer {
     visibility: hidden;
 }
 
-/* PHONE POV */
-/* grid */
-@media screen and (max-width: 490px) {
-    .wrapper {
-        display: grid;
-        grid-template-columns: repeat(8, 1fr);
-        grid-template-rows: auto 41vh auto auto auto auto;
+/* ================ */
+/* === Css grid === */
+/* ================ */
 
-    }
+.wrapper {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: auto auto auto auto auto auto;
 
-    .adress {
-        color: #7b1e31;
-    }
-
-    header {
-        grid-column: span 8;
-        grid-row: 2;
-        height: 41vh;
-    }
-
-    /* #infoContact1 {
-        color: #7B1E31;
-    } */
-
-    .topnav {
-        grid-column: Span 8;
-        grid-row: 1;
-    }
-
-    #secStory {
-        grid-column: span 8;
-        grid-row: 3;
-    }
-
-    /* modifiacation du carousel */
-    #secService {
-        grid-column: span 8;
-        grid-row: 4;
-    }
-    .contenu_carou {
-        margin: 20px 0 0 0;
-    }
-
-    .caroussel_diapo {
-        margin: 20px 0 0 0;
-    }
-    /* modifiacation du formulaire de contact (taille des blocs et position) */
-    #secContact {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .borderTitle {
-        margin-top: 15px;
-    }
-
-    .divCenter {
-        width: 100%;
-        margin: 10px;
-    }
-
-    fieldset {
-        width: 94%;
-        border-radius: 10px;
-        border: 2px solid #7b1e31;
-    }
-
-    label {
-        display: inline-block;
-        width: 40%;
-    }
-
-    .formulaire {
-        margin-bottom: 10px;
-    }
-
-    input {
-        display: inline-block;
-        width: 50%;
-    }
-
-    #object {
-        margin-bottom: 10px;
-    }
-
-    footer {
-        grid-column: span 8;
-        grid-row: 6/7;
-        display: grid;
-        /* grid-template-columns: 40% 40% 20%; */
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-template-rows: 2;
-    }
-
-    #legalinf {
-        grid-column: 1/3;
-        grid-row: 6;
-    }
-
-    #gmap {
-        grid-column: 4/7;
-        grid-row: 6;
-        height: 50px;
-    }
-
-    .fblogo {
-        grid-column: 7/8;
-        grid-row: 6;
-    }
-
-    #copyright {
-        grid-column: span 8;
-        grid-row: 7;
-    }
-
-    #secContact {
-
-        grid-column: span 8;
-        grid-row: 5;
-    }
-
-    /* fix contenus sur la gauche pour tel  */
-    
-    .caroussel div:nth-child(1) {
-        transform: translate3d(0, 0, 540px) scale(0)
-    }
-
-    .caroussel div:nth-child(2) {
-        transform: rotateY(45deg) translateZ(540px) scale(.0)
-    }
-
-    .caroussel div:nth-child(3) {
-        transform: rotateY(90deg) translateZ(540px) scale(.0)
-    }
-
-    .caroussel div:nth-child(4) {
-        transform: rotateY(135deg) translateZ(540px) scale(.0)
-    }
-
-    .caroussel div:nth-child(5) {
-        transform: rotateY(180deg) translateZ(540px) scale(.0)
-    }
-
-    .caroussel div:nth-child(6) {
-        transform: rotateY(225deg) translateZ(540px) scale(.0)
-    }
-
-    .caroussel div:nth-child(7) {
-        transform: rotateY(270deg) translateZ(540px) scale(.0)
-    }
-
-    .caroussel div:nth-child(8) {
-        transform: rotateY(315deg) translateZ(540px) scale(.0)
-    }
+    grid-template-areas: "header header"
+        "topnav topnav"
+        "secStory secStory"
+        "secService secService"
+        "secContact secContact"
+        "footer footer";
 }
-/* grid */
-/* PHONE POV */
+
+header {
+    grid-area: header;
+}
+
+.topnav {
+    grid-area: topnav;
+}
+
+#secStory {
+    grid-area: secStory;
+}
+
+#secService {
+    grid-area: secService;
+}
+
+#secContact {
+    grid-area: secContact;
+}
+
+footer {
+    grid-area: footer;
+}
