--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -165,7 +165,7 @@ h2 {
 
 fieldset {
 
-    width: 60em;    
+    width: 80%;    
     padding: 10px;
     margin: 10px;
     border: none;
@@ -174,39 +174,10 @@ fieldset {
     border: 2px solid #7b1e31;
     margin-left: auto;
     margin-right: auto;
-    text-align: center;    
-    display: grid;
-    gap: 1em;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
-    grid-template-columns: 1fr 1fr;   
-}
-#prenom{
-    grid-column: 1;
-    grid-row: 1;
-}
-#nom{
-    grid-column: 1;
-    grid-row: 1;
-}
-#mail{
-    grid-column: 1;
-    grid-row: 2;
-}
-#userphone{
-    grid-column: 1;
-    grid-row: 2;
-}
-#custom-select{
-    grid-column: 2fr;
-    grid-row: 3;
-}
-#textarea{
-    grid-column: 2fr;
-    grid-row: 4;
-}
-.button{
-    grid-column: 1 / 3;
-    grid-row: 5;
+    text-align: center; 
+}  
+input{
+    width: 40%;
 }
 
 
