--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -165,7 +165,7 @@ h2 {
 
 fieldset {
 
-    width: 80%;    
+    width: 100%;    
     padding: 10px;
     margin: 10px;
     border: none;
@@ -176,9 +176,10 @@ fieldset {
     margin-right: auto;
     text-align: center; 
 }  
-input{
-    width: 40%;
+.row{
+    margin-bottom: 5px;
 }
+
 
 
 
