--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,9 +72,6 @@ header {
     border-style: solid;
     border-radius: 8px;
     width: 200px;
-    grid-column: 1 / 3;
-    grid-row: 1;
-
 }
 
 /* ----------- */
@@ -133,14 +130,6 @@ h2 {
 /* ---------- */
 /* CARROUSSEL */
 /* ---------- */
-.borderTitle {
-    display: block;
-    margin: auto;
-    border-color: #7B1E31;
-    border-style: solid;
-    border-radius: 8px;
-    width: 200px;
-}
 
 /* ---------- */
 /* Formulaire */
@@ -148,7 +137,7 @@ h2 {
 
 .card {
     margin: 20px auto;
-    width: 60%;
+    width: 100%;
     background-color: rgba(0, 0, 0, 0.74);
     background-size: 100%;
     border-radius: 12px;
@@ -158,7 +147,7 @@ h2 {
     padding: 5px;
     text-align: center;
     font-size: 0.8rem;
-    text-justify: inter-word;  
+    text-justify: inter-word;
 }
 
 #secContact>p {
@@ -167,7 +156,7 @@ h2 {
 
 fieldset {
 
-    width: 60%;    
+    width: auto;
     padding: 10px;
     margin: 10px;
     border: none;
@@ -176,9 +165,9 @@ fieldset {
     border: 2px solid #7b1e31;
     margin-left: auto;
     margin-right: auto;
-    text-align: center; 
-}  
-.row{
+    text-align: center;
+}
+.row {
     margin-bottom: 5px;
 }
 
@@ -309,7 +298,7 @@ footer {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: auto 100vh auto auto auto auto;
-    
+
         grid-template-areas: "topnav topnav"
             "header header"
             "secStory secStory"
@@ -317,48 +306,48 @@ footer {
             "secContact secContact"
             "footer footer";
     }
-    
+
     header {
         grid-area: header;
         height: 41vh;
     }
-    
+
     /* ============ */
     /* ===NavBar=== */
     /* ============ */
-    
+
     nav {
         grid-area: topnav;
         background-color: rgb(34, 34, 34);
     }
-    
+
     nav a img {
         height: 20px;
         filter: invert();
     }
-    
+
     .dropdown-menu a img {
         filter: none;
     }
-    
+
     #secStory {
         grid-area: secStory;
     }
-    
+
     #secService {
         grid-area: secService;
     }
-    
+
     .borderTitle {
         margin-bottom: 30px;
     }
-    
+
     #secContact {
         grid-area: secContact;
     }
-    
+
     footer {
         grid-area: footer;
     }
-    
+
 }
