--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -133,14 +133,7 @@ h2 {
 /* ---------- */
 /* CARROUSSEL */
 /* ---------- */
-.borderTitle {
-    display: block;
-    margin: auto;
-    border-color: #7B1E31;
-    border-style: solid;
-    border-radius: 8px;
-    width: 200px;
-}
+
 
 /* ---------- */
 /* Formulaire */
@@ -158,7 +151,8 @@ h2 {
     padding: 5px;
     text-align: center;
     font-size: 0.8rem;
-    text-justify: inter-word; 
+    text-justify: inter-word;
+    display: none;
 }
 
 #secContact>p {
@@ -167,7 +161,7 @@ h2 {
 
 fieldset {
 
-    width: 100%;    
+    width: 100%;
     padding: 10px;
     margin: 10px;
     border: none;
@@ -176,9 +170,10 @@ fieldset {
     border: 2px solid #7b1e31;
     margin-left: auto;
     margin-right: auto;
-    text-align: center; 
-}  
-.row{
+    text-align: center;
+}
+
+.row {
     margin-bottom: 5px;
 }
 
@@ -290,7 +285,7 @@ nav a img {
     grid-area: secService;
 }
 
-.borderTitle { 
+.borderTitle {
     margin-bottom: 20px;
 }
 
@@ -338,7 +333,7 @@ footer {
         filter: invert();
     }
 
-    .borderTitle { 
+    .borderTitle {
         margin-top: 20px;
     }
 
@@ -348,8 +343,8 @@ footer {
 
     #secStory {
         grid-area: secStory;
-        margin: 0px;
-        padding: 0px;
+        /* margin: 0px;
+        padding: 0px; */
     }
 
     #secService {
@@ -368,9 +363,12 @@ footer {
         grid-area: footer;
     }
 
+    .card {
+        display: block;
+    }
 }
 
-/* config pour ecrant normale */
+/* config pour ecran normale */
 
 @media screen and (min-width: 900px) {
 
@@ -428,5 +426,9 @@ footer {
 
     footer {
         grid-area: footer;
+    }
+
+    .card {
+        display: block;
     }
 }
