--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,8 +119,9 @@ li{
     color: white;
     padding: 5px;
     text-align: center;
+    overflow: auto;
     font-size: 0.8rem;
-    width: 60%;
+    width: 40%;
 }
 
 /* ---------- */
